# netplayground

./: .gitignore  .gitmodules  README.md
cmake/: GitSubmodule.cmake  target_source_local.cmake
examples/src/client/: client_main.cpp
examples/src/sender/: sender_main.cpp
include/: Defines.h
include/net/: Allocator.h  Common.h  Host.h  NetEventHandler.h  NetFwd.h  Packet.h  Peer.h  Utility.h
include/net/streams/: InputStream.h  OutputStream.h
src/: CMakeLists.txt
src/net/: Address.cpp  Allocator.cpp  Common.cpp  Host.cpp  Net.cpp  NetEventHandler.cpp  Packet.cpp  Peer.cpp
src/net/streams/: InputStream.cpp  OutputStream.cpp
tests/: CMakeLists.txt  benchmark_main.cpp
tests/unittests/: packet_tests.cpp  stream_tests.cpp
